# atlas-llm

./: README.md  pyproject.toml
atlas-llm/: generate.py
atlas-llm/src/: __init__.py
atlas-llm/src/core/: __init__.py  block.py  model.py
atlas-llm/src/layers/: activations.py  ffn.py
atlas-llm/src/layers/attention/: __init__.py  base.py  gqa.py  mha.py  rope.py
atlas-llm/src/layers/norm/: rmsnorm.py
atlas-llm/src/layers/rope/: __init__.py  base.py  factory.py  llama.py  qwen.py  rope.py
atlas-llm/src/layers/utils/: __init__.py  kv_cache.py
